# ChangeLog for dev-perl/IPC-Run3
# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-perl/IPC-Run3/ChangeLog,v 1.31 2008/09/07 09:11:59 tove Exp $

  07 Sep 2008; Torsten Veller <tove@gentoo.org> -IPC-Run3-0.034.ebuild,
  -IPC-Run3-0.035.ebuild, -IPC-Run3-0.036.ebuild, -IPC-Run3-0.037.ebuild:
  Cleanup

*IPC-Run3-0.042 (07 Sep 2008)

  07 Sep 2008; Torsten Veller <tove@gentoo.org> +IPC-Run3-0.042.ebuild:
  Version bump

  17 Jul 2008; Raúl Porcel <armin76@gentoo.org> IPC-Run3-0.038.ebuild:
  alpha stable

  17 May 2008; nixnut <nixnut@gentoo.org> IPC-Run3-0.038.ebuild:
  Added ~ppc wrt bug 219723

  29 Apr 2008; Jeroen Roovers <jer@gentoo.org> IPC-Run3-0.038.ebuild:
  Marked ~hppa (bug #219723).

  29 Apr 2008; Raúl Porcel <armin76@gentoo.org> IPC-Run3-0.038.ebuild:
  Add ~alpha wrt #219723

  17 Dec 2007; Samuli Suominen <drac@gentoo.org> IPC-Run3-0.038.ebuild:
  amd64 stable

  06 Dec 2007; Raúl Porcel <armin76@gentoo.org> IPC-Run3-0.038.ebuild:
  ia64/sparc/x86 stable

  10 Nov 2007; Samuli Suominen <drac@gentoo.org> IPC-Run3-0.037.ebuild:
  amd64 stable

*IPC-Run3-0.038 (19 Oct 2007)

  19 Oct 2007; Christian Hartmann <ian@gentoo.org> +IPC-Run3-0.038.ebuild:
  Version bump

  11 Jul 2007; Raúl Porcel <armin76@gentoo.org> IPC-Run3-0.037.ebuild:
  ia64/x86 stable

  21 Jun 2007; Michael Cummings <mcummings@gentoo.org>
  IPC-Run3-0.037.ebuild:
  Marking sparc stable

*IPC-Run3-0.037 (06 Apr 2007)

  06 Apr 2007; Michael Cummings <mcummings@gentoo.org>
  +IPC-Run3-0.037.ebuild:
  Version bump

  05 Mar 2007; Andrej Kacian <ticho@gentoo.org> IPC-Run3-0.036.ebuild:
  Stable on x86, bug #169152.

  22 Jan 2007; Bryan Østergaard <kloeri@gentoo.org> IPC-Run3-0.036.ebuild:
  Stable on IA64.

  24 Nov 2006; Michael Cummings <mcummings@gentoo.org>
  IPC-Run3-0.036.ebuild:
  sparc stable

  24 Nov 2006; Michael Cummings <mcummings@gentoo.org>
  IPC-Run3-0.036.ebuild:
  amd64 stable
